<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.tarun.cmpe2771.Main2Activity">

    <ImageView
        android:id="@+id/image2"
        android:layout_width="107dp"
        android:layout_height="118dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/bricks" />

    <TextView
        android:id="@+id/activityb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image2"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="36dp"
        android:layout_toEndOf="@+id/image2"
        android:layout_toRightOf="@+id/image2"
        android:text="@string/activityB"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textpage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/text1"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="93dp"
        android:layout_toEndOf="@+id/image2"
        android:layout_toRightOf="@+id/image2"
        android:background="@android:color/background_dark"
        android:text="@string/finish"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>
